--- a/word_embeddings.ipynb
+++ b/word_embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,14 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(88, 2)\n"
+      "(231, 2)\n"
      ]
     },
     {
@@ -69,7 +69,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Is it going to rain today?</td>\n",
+       "      <td>Is it going to rain today in Mumabai?</td>\n",
        "      <td>Query</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -84,12 +84,12 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Make a call to my friend</td>\n",
+       "      <td>please make a call to my friend</td>\n",
        "      <td>Automation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Send e-mail to a person A</td>\n",
+       "      <td>Send an e-mail to my colleague</td>\n",
        "      <td>Automation</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -102,20 +102,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                                 Text      Category\n",
-       "0                    Hi, How are you?  Conversation\n",
-       "1                 Open the Calculator    Automation\n",
-       "2           What is Computer Science?         Query\n",
-       "3              Hello, How is it going  Conversation\n",
-       "4          Is it going to rain today?         Query\n",
-       "5  Thank you for helping me out today  Conversation\n",
-       "6                           Hi there!  Conversation\n",
-       "7            Make a call to my friend    Automation\n",
-       "8           Send e-mail to a person A    Automation\n",
-       "9      Back up recently deleted files    Automation"
+       "                                    Text      Category\n",
+       "0                       Hi, How are you?  Conversation\n",
+       "1                    Open the Calculator    Automation\n",
+       "2              What is Computer Science?         Query\n",
+       "3                 Hello, How is it going  Conversation\n",
+       "4  Is it going to rain today in Mumabai?         Query\n",
+       "5     Thank you for helping me out today  Conversation\n",
+       "6                              Hi there!  Conversation\n",
+       "7        please make a call to my friend    Automation\n",
+       "8         Send an e-mail to my colleague    Automation\n",
+       "9         Back up recently deleted files    Automation"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,20 +130,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Category\n",
-       "Automation      33\n",
-       "Query           29\n",
-       "Conversation    26\n",
+       "Query           84\n",
+       "Automation      78\n",
+       "Conversation    69\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,16 +155,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 2 0 2 0 0 1 1 1 2 2 2 2 0 2 1 1 2 2 0 2 2 1 1 1 0 0 0 0 2 2 0 2 2 1 2\n",
-      " 1 0 2 2 2 0 0 2 1 1 2 1 1 1 1 1 0 0 0 2 2 1 0 2 1 1 1 1 1 0 0 0 0 0 0 0 0\n",
-      " 1 1 1 2 2 2 2 1 2 1 1 1 1 1]\n"
+      "[0 1 2 0 2 0 0 1 1 1 2 2 2 2 0 2 2 2 0 1 1 2 2 0 2 2 1 1 1 0 0 0 0 2 2 0 1\n",
+      " 2 1 2 1 0 2 2 2 0 0 2 1 1 2 1 1 1 1 1 0 0 0 2 1 1 0 2 1 1 1 1 1 0 0 0 0 0\n",
+      " 0 0 0 1 1 1 2 2 2 2 2 2 1 1 1 1 1 0 0 0 0 0 0 1 2 1 1 1 2 1 1 2 1 1 1 1 1\n",
+      " 1 1 1 1 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 2 2 2 2 2 2 2 2 2 2\n",
+      " 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 2 2 2 2 2 2 2 2 1 1 1 1\n",
+      " 1 1 1 1 2 2 2 1 0 0 1 0 2 0 0 2 2 2 1 1 2 1 2 1 2 1 2 1 1 0 2 0 0 1 0 1 2\n",
+      " 2 2 1 1 1 2 2 1 1]\n"
      ]
     }
    ],
@@ -180,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,16 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Text_Vector'] = df['Text'].apply(lambda text: nlp(text).vector)"
+    "df['Text_Vector'] = df['Text'].apply(lambda text: nlp(' '.join([token.text for token in nlp(text) if not token.is_punct])).vector)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +239,7 @@
        "      <td>Hi, How are you?</td>\n",
        "      <td>Conversation</td>\n",
        "      <td>0</td>\n",
-       "      <td>[-0.7103467, 0.13787332, -0.27423534, -0.39681...</td>\n",
+       "      <td>[-0.69876504, -0.0001500044, -0.19010301, -0.4...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -249,43 +253,43 @@
        "      <td>What is Computer Science?</td>\n",
        "      <td>Query</td>\n",
        "      <td>2</td>\n",
-       "      <td>[-0.703838, 0.35266557, -0.19642279, -0.141074...</td>\n",
+       "      <td>[-0.69642, 0.33735198, -0.13490349, -0.1035250...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Hello, How is it going</td>\n",
        "      <td>Conversation</td>\n",
        "      <td>0</td>\n",
-       "      <td>[-0.6905933, 0.26276496, -0.42689165, -0.20278...</td>\n",
+       "      <td>[-0.68201, 0.23253398, -0.42377, -0.18508801, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Is it going to rain today?</td>\n",
+       "      <td>Is it going to rain today in Mumabai?</td>\n",
        "      <td>Query</td>\n",
        "      <td>2</td>\n",
-       "      <td>[-0.7227101, 0.35594997, -0.27357858, -0.10490...</td>\n",
+       "      <td>[-0.62227756, 0.2895575, -0.213225, -0.0321208...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         Text      Category  Category_Vector  \\\n",
-       "0            Hi, How are you?  Conversation                0   \n",
-       "1         Open the Calculator    Automation                1   \n",
-       "2   What is Computer Science?         Query                2   \n",
-       "3      Hello, How is it going  Conversation                0   \n",
-       "4  Is it going to rain today?         Query                2   \n",
+       "                                    Text      Category  Category_Vector  \\\n",
+       "0                       Hi, How are you?  Conversation                0   \n",
+       "1                    Open the Calculator    Automation                1   \n",
+       "2              What is Computer Science?         Query                2   \n",
+       "3                 Hello, How is it going  Conversation                0   \n",
+       "4  Is it going to rain today in Mumabai?         Query                2   \n",
        "\n",
        "                                         Text_Vector  \n",
-       "0  [-0.7103467, 0.13787332, -0.27423534, -0.39681...  \n",
+       "0  [-0.69876504, -0.0001500044, -0.19010301, -0.4...  \n",
        "1  [-0.64370006, 0.13723333, -0.115854345, 0.2468...  \n",
-       "2  [-0.703838, 0.35266557, -0.19642279, -0.141074...  \n",
-       "3  [-0.6905933, 0.26276496, -0.42689165, -0.20278...  \n",
-       "4  [-0.7227101, 0.35594997, -0.27357858, -0.10490...  "
+       "2  [-0.69642, 0.33735198, -0.13490349, -0.1035250...  \n",
+       "3  [-0.68201, 0.23253398, -0.42377, -0.18508801, ...  \n",
+       "4  [-0.62227756, 0.2895575, -0.213225, -0.0321208...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,15 +300,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(70,)\n",
-      "(88,)\n"
+      "(184,)\n",
+      "(47,)\n"
      ]
     }
    ],
@@ -318,13 +322,14 @@
     "                                    test_size = 0.2,\n",
     "                                    random_state = 500)  \n",
     "print(X_train.shape)\n",
-    "print(df.Text_Vector.shape)\n",
+    "print(X_test.shape)\n",
+    "# print(df['Text_Vector'].shape)\n",
     "# print(y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -359,13 +364,13 @@
       "Classification Report: \n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "Conversation       1.00      1.00      1.00         6\n",
-      "  Automation       0.88      0.88      0.88         8\n",
-      "       Query       0.75      0.75      0.75         4\n",
+      "Conversation       0.93      0.67      0.78        21\n",
+      "  Automation       0.79      0.65      0.71        17\n",
+      "       Query       0.44      0.89      0.59         9\n",
       "\n",
-      "    accuracy                           0.89        18\n",
-      "   macro avg       0.88      0.88      0.88        18\n",
-      "weighted avg       0.89      0.89      0.89        18\n",
+      "    accuracy                           0.70        47\n",
+      "   macro avg       0.72      0.73      0.69        47\n",
+      "weighted avg       0.79      0.70      0.72        47\n",
       "\n"
      ]
     }
@@ -386,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -395,13 +400,13 @@
      "text": [
       "Classification Report:               precision    recall  f1-score   support\n",
       "\n",
-      "Conversation       1.00      0.60      0.75        10\n",
-      "  Automation       0.38      0.60      0.46         5\n",
-      "       Query       0.50      0.67      0.57         3\n",
+      "Conversation       0.93      0.64      0.76        22\n",
+      "  Automation       0.71      0.71      0.71        14\n",
+      "       Query       0.50      0.82      0.62        11\n",
       "\n",
-      "    accuracy                           0.61        18\n",
-      "   macro avg       0.62      0.62      0.59        18\n",
-      "weighted avg       0.74      0.61      0.64        18\n",
+      "    accuracy                           0.70        47\n",
+      "   macro avg       0.72      0.72      0.70        47\n",
+      "weighted avg       0.77      0.70      0.71        47\n",
       "\n"
      ]
     }
@@ -419,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -429,13 +434,13 @@
       "Classification Report: \n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "Conversation       1.00      1.00      1.00         6\n",
-      "  Automation       1.00      0.80      0.89        10\n",
-      "       Query       0.50      1.00      0.67         2\n",
+      "Conversation       0.93      0.74      0.82        19\n",
+      "  Automation       0.79      0.58      0.67        19\n",
+      "       Query       0.44      0.89      0.59         9\n",
       "\n",
-      "    accuracy                           0.89        18\n",
-      "   macro avg       0.83      0.93      0.85        18\n",
-      "weighted avg       0.94      0.89      0.90        18\n",
+      "    accuracy                           0.70        47\n",
+      "   macro avg       0.72      0.73      0.69        47\n",
+      "weighted avg       0.78      0.70      0.72        47\n",
       "\n"
      ]
     }
@@ -454,48 +459,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn.linear_model import LinearRegression\n",
-    "# lg = LinearRegression()\n",
-    "# lg.fit(scaled_train_embed, y_train)\n",
-    "# y_pred = lg.predict(scaled_test_embed)\n",
-    "# print(\"Classification Report: \")\n",
-    "# target_names = df['Category'].unique().tolist()\n",
-    "# print(classification_report(y_pred, y_test, target_names = target_names, zero_division = 0))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input:  who is the dance master in the India?\n",
-      "Category:  Query\n"
+      "Classification Report: \n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "Conversation       0.87      0.72      0.79        18\n",
+      "  Automation       0.79      0.85      0.81        13\n",
+      "       Query       0.72      0.81      0.76        16\n",
+      "\n",
+      "    accuracy                           0.79        47\n",
+      "   macro avg       0.79      0.79      0.79        47\n",
+      "weighted avg       0.80      0.79      0.79        47\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/shreejavasala/Documents/Mini_Project/venv_mini/lib/python3.11/site-packages/sklearn/linear_model/_logistic.py:469: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "lg = LogisticRegression()\n",
+    "lg.fit(scaled_train_embed, y_train)\n",
+    "y_pred = lg.predict(scaled_test_embed)\n",
+    "print(\"Classification Report: \")\n",
+    "target_names = df['Category'].unique().tolist()\n",
+    "print(classification_report(y_pred, y_test, target_names = target_names, zero_division = 0))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input:  how's day going?\n",
+      "Category:  Conversation\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "    # doc = nlp(input)\n",
-    "    # tokens = [token.lemma_ for token in doc if not token.is_punct]\n",
-    "    # # input_tf = tf.transform(new_input)\n",
-    "    # return \" \".join(tokens)\n",
-    "   \n",
     "\n",
     "#Categorizing the user_input\n",
+    "\n",
+    "# def preprocess_user_input(input):\n",
+    "#         doc = nlp(input)\n",
+    "#         tokens = [token.text for token in doc if not token.is_punct] #removes the punctuation\n",
+    "#         # print((tokens)) -->list of tokens of type string\n",
+    "#         n_output = ' '.join(tokens)\n",
+    "#         # print(n_output) -->string\n",
+    "#         doc = nlp(n_output)\n",
+    "#         n_output = doc.vector\n",
+    "#         # print(n_output.shape) --> 1D vector\n",
+    "#         n_output = doc.reshape(1,-1)\n",
+    "#         # print(n_output.shape) --> 2D array(vector) after reshape\n",
+    "#         scaled_input_embedding = scalar.transform(n_output)\n",
+    "#         prediction = mb.predict(scaled_input_embedding)\n",
+    "#         category_map = {0: \"Conversation\", 1: \"Automation\", 2: \"Query\"}\n",
+    "#         predicted_Category = category_map[prediction[0]]\n",
+    "#         return predicted_Category\n",
+    "\n",
+    "\n",
     "def preprocess_user_input(input):\n",
     "        doc = nlp(input)\n",
-    "        n_output = doc.vector\n",
-    "        n_output = n_output.reshape(1,-1)\n",
+    "        input_vector = [token.vector for token in doc if not token.is_punct] #removes the punctuation\n",
+    "        if not input_vector:\n",
+    "                return \"unknown category\"    \n",
+    "        n_output = np.stack(input_vector)\n",
     "        scaled_input_embedding = scalar.transform(n_output)\n",
-    "        prediction = mb.predict(scaled_input_embedding)\n",
+    "        prediction = svc.predict(scaled_input_embedding)\n",
     "        category_map = {0: \"Conversation\", 1: \"Automation\", 2: \"Query\"}\n",
     "        predicted_Category = category_map[prediction[0]]\n",
     "        return predicted_Category\n",
@@ -505,20 +558,6 @@
     "print(\"Input: \", user_input)\n",
     "print(\"Category: \", preprocess_user_input(user_input))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
